--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <version>1.18.30</version>
     </dependency>
 
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+
   </dependencies>
 
 
